syntax = "proto3";

package dataplane;

import "google/protobuf/timestamp.proto";

import "cloud/disk_manager/internal/pkg/types/types.proto";

option go_package = "github.com/ydb-platform/nbs/cloud/disk_manager/internal/pkg/dataplane/protos";

////////////////////////////////////////////////////////////////////////////////

enum ReplicateDiskTaskEvents {
    FINISH_REPLICATION = 0;
}

message ReplicateDiskTaskRequest {
    types.Disk SrcDisk = 1;
    types.Disk DstDisk = 2;

    uint64 FillGeneration = 3;
    bool UseLightCheckpoint = 4; // Use light or withoutData checkpoint.

    bool IgnoreBaseDisk = 5;
}

message ReplicateDiskTaskState {
    uint64 FillSeqNumber = 1;
    uint32 Iteration = 2;
    uint32 FinalIteration = 3;

    uint32 ChunkCount = 4;
    uint32 MilestoneChunkIndex = 5;
    
    double Progress = 6;
    int64 SecondsRemaining = 7;
    google.protobuf.Timestamp UpdatedAt = 8;

    // Store SecondsRemaining each UselessReplicationIterationsBeforeAbort.
    // If SecondsRemaining degrades, abort replication.
    int64 MeasuredSecondsRemaining = 9;

    string ProxyOverlayDiskId = 10;
}

message ReplicateDiskTaskMetadata {
    double Progress = 1;
    int64 SecondsRemaining = 2;
    google.protobuf.Timestamp UpdatedAt = 3;
}
